// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogActions Component allows external props to be added 1`] = `
<WithStyles(HvDialogActions)
  disableActionSpacing={true}
>
  Dialog Content
</WithStyles(HvDialogActions)>
`;

exports[`DialogActions Component allows external styles to be added 1`] = `
<WithStyles(HvDialogActions)
  classes={
    Object {
      "action": "testClassAction",
      "root": "testClassRoot",
    }
  }
>
  Dialog Content
</WithStyles(HvDialogActions)>
`;

exports[`DialogActions Component should render correctly if opened 1`] = `
<WithStyles(HvDialogActions)>
  Dialog Content
</WithStyles(HvDialogActions)>
`;

exports[`DialogActions withStyles should render correctly 1`] = `
<WithStyles(HvDialogActions)>
  Dialog Content
</WithStyles(HvDialogActions)>
`;
